--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,11 +1,10 @@
-# ワークフロー名
 name: test
 on:
   push:
     branches:
-      - main
+      - feature/cron
   schedule:
-    - cron: '0 13 * * *'
+    - cron: '0 10 * * *'
 
 jobs:
   build:
@@ -15,4 +14,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - run: python my_script.py
+      - run: |
+          python -m pip install --upgrade pip
+          pip install requests
+      - run: python main.py
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
