--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,10 +1,11 @@
+# ワークフロー名
 name: test
 on:
   push:
     branches:
-      - feature/cron
+      - main
   schedule:
-    - cron: '0 10 * * *'
+    - cron: '*/5 * * * *'
 
 jobs:
   build:
@@ -14,10 +15,13 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+      - name: Change to repository root directory
+        run: cd $GITHUB_WORKSPACE
       - run: |
           python -m pip install --upgrade pip
           pip install requests
-      - run: python main.py
+      - run: |
+          python main.py
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
           WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
