--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,9 +3,9 @@ name: test
 on:
   push:
     branches:
-      - main
+      - feature/cron
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 10 * * *'
 
 jobs:
   build:
@@ -15,13 +15,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - name: Change to repository root directory
-        run: cd $GITHUB_WORKSPACE
       - run: |
           python -m pip install --upgrade pip
           pip install requests
       - run: |
-          python main.py
+          python $GITHUB_WORKSPACE/main.py
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
           WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
