--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,9 +3,9 @@ name: test
 on:
   push:
     branches:
-      - main
+      - feature/cron
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '*/3 * * * *' # 3分ごとに実行
 
 jobs:
   build:
@@ -18,7 +18,8 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install requests
-      - run: python main.py
+      - run: |
+          python $GITHUB_WORKSPACE/main.py
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
           WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
