--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - feature/cron
   schedule:
-    - cron: '*/1 * * * *' # 3分ごとに実行
+    - cron: '* 17 * * *' 
 
 jobs:
   build:
