--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,10 +1,10 @@
-name: test
+name: test4
 on:
   push:
     branches:
       - feature/cron
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '*/1 * * * *'
 
 jobs:
   build:
