--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -19,5 +19,5 @@ jobs:
           pip install requests
       - run: python main.py
         env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
           WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
